Updated the parse_slack file, with upload of data

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -24,7 +24,7 @@
     "from collections import Counter\n",
     "\n",
     "import pandas as pd\n",
-    "from matplotlib import pyplot as plt\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
     "from nltk.corpus import stopwords\n",
@@ -217,6 +217,41 @@
     "        return timestamp_\n",
     "    else: \n",
     "        print(f\"{column} not in data\")\n",
+    "\n",
+    "\n",
+    "# Use SlackDataLoader to load data\n",
+    "data_loader = SlackDataLoader(\"path_to_slack_exported_data_folder\")\n",
+    "\n",
+    "# Get all channel messages\n",
+    "all_channel_msgs = pd.concat([data_loader.get_channel_messages(channel['name']) for channel in data_loader.channels])\n",
+    "\n",
+    "# Parse reaction data\n",
+    "reaction_data = parse_slack_reaction(\"path_to_reaction_data_folder\", \"General\")\n",
+    "\n",
+    "# Get community participation data\n",
+    "comm_participation = get_community_participation(\"path_to_community_participation_data_folder\")\n",
+    "\n",
+    "# Map user IDs to real names\n",
+    "user_profile = data_loader.get_users()\n",
+    "mapped_comm_dict = utils.map_userid_2_realname(user_profile, comm_participation, plot=True)\n",
+    "\n",
+    "# Get tagged users\n",
+    "tagged_users = utils.get_tagged_users(all_channel_msgs)\n",
+    "\n",
+    "# Get top 20 users\n",
+    "utils.get_top_20_user(all_channel_msgs, channel='General')\n",
+    "\n",
+    "# Draw average reply count\n",
+    "utils.draw_avg_reply_count(all_channel_msgs, channel='General')\n",
+    "\n",
+    "# Draw average reply users count\n",
+    "utils.draw_avg_reply_users_count(all_channel_msgs, channel='General')\n",
+    "\n",
+    "# Draw word cloud\n",
+    "utils.draw_wordcloud(all_channel_msgs['msg_content'], week='Week8-9 Combined')\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "def get_tagged_users(df):\n",
     "    \"\"\"get all @ in the messages\"\"\"\n",
