Updated parse_slack to perform EDA

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -300,6 +300,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Top and Bottom 10 Users by Reply Count\n",
+    "top_users_by_reply_count = all_channel_msgs.groupby('sender_name')['reply_count'].sum().sort_values(ascending=False)[:10]\n",
+    "bottom_users_by_reply_count = all_channel_msgs.groupby('sender_name')['reply_count'].sum().sort_values(ascending=True)[:10]\n",
+    "\n",
+    "# Print or visualize the results\n",
+    "print(\"Top Users by Reply Count:\")\n",
+    "print(top_users_by_reply_count)\n",
+    "\n",
+    "print(\"\\nBottom Users by Reply Count:\")\n",
+    "print(bottom_users_by_reply_count)\n",
+    "\n",
+    "all_channel_msgs['sender_name'].value_counts().sort_values(ascending=False)[:10]\n",
+    "all_channel_msgs['sender_name'].value_counts().sort_values(ascending=True)[:10]\n",
+    "\n",
+    "reaction_data.groupby('sender_name')['reaction_count'].sum().sort_values(ascending=False)[:10]\n",
+    "reaction_data.groupby('sender_name')['reaction_count'].sum().sort_values(ascending=True)[:10]\n",
+    "\n",
+    "\n",
+    "all_channel_msgs.sort_values(by='reply_count', ascending=False)[:10]\n",
+    "\n",
+    "\n",
+    "reaction_data.sort_values(by='reaction_count', ascending=False)[:10]\n",
+    "\n",
+    "# Assuming you have a column 'mentions' in your DataFrame\n",
+    "all_channel_msgs[all_channel_msgs['mentions'].apply(lambda x: len(x) if x else 0)].sort_values(by='mentions', ascending=False)[:10]\n",
+    "\n",
+    "all_channel_msgs['channel'].value_counts().idxmax()\n",
+    "\n",
+    "activity_df = pd.DataFrame({\n",
+    "    'Channel': all_channel_msgs['channel'],\n",
+    "    'Messages': all_channel_msgs.groupby('channel').size(),\n",
+    "    'Replies_Reactions_Sum': all_channel_msgs.groupby('channel')['reply_count'].sum() + reaction_data.groupby('channel')['reaction_count'].sum()\n",
+    "})\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.scatterplot(x='Messages', y='Replies_Reactions_Sum', hue='Channel', data=activity_df)\n",
+    "plt.title('2D Scatter Plot of Channel Activity')\n",
+    "plt.show()\n",
+    "\n",
+    "# Convert to datetime\n",
+    "all_channel_msgs['msg_sent_time'] = pd.to_datetime(all_channel_msgs['msg_sent_time'])\n",
+    "all_channel_msgs['time_thread_start'] = pd.to_datetime(all_channel_msgs['time_thread_start'])\n",
+    "\n",
+    "# Calculate time difference\n",
+    "all_channel_msgs['time_to_reply'] = all_channel_msgs['time_thread_start'] - all_channel_msgs['msg_sent_time']\n",
+    "\n",
+    "# Calculate fraction replied within 5 minutes\n",
+    "fraction_replied_within_5mins = (all_channel_msgs['time_to_reply'] <= pd.Timedelta(minutes=5)).sum() / len(all_channel_msgs)\n",
+    "\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "sns.scatterplot(x='time_to_reply', y=all_channel_msgs['msg_sent_time'].dt.hour, hue='channel', data=all_channel_msgs)\n",
+    "plt.title('2D Scatter Plot of Time Difference vs Time of Day')\n",
+    "plt.show()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_top_20_user(data, channel='Random'):\n",
     "    \"\"\"get user with the highest number of message sent to any channel\"\"\"\n",
     "\n",
