updated the parse_slack file with calcution of time difference

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -362,6 +362,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Assuming you have a DataFrame with columns 'msg_sent_time', 'time_thread_start', etc.\n",
+    "all_channel_msgs['time_to_reply'] = all_channel_msgs['time_thread_start'] - all_channel_msgs['msg_sent_time']\n",
+    "all_channel_msgs['time_to_reaction'] = reaction_data['reaction_timestamp'] - all_channel_msgs['msg_sent_time']\n",
+    "\n",
+    "# data_processing.py\n",
+    "def calculate_time_differences(all_channel_msgs, reaction_data):\n",
+    "    # Assuming you have a DataFrame with columns 'msg_sent_time', 'time_thread_start', etc.\n",
+    "    all_channel_msgs['time_to_reply'] = all_channel_msgs['time_thread_start'] - all_channel_msgs['msg_sent_time']\n",
+    "    all_channel_msgs['time_to_reaction'] = reaction_data['reaction_timestamp'] - all_channel_msgs['msg_sent_time']\n",
+    "\n",
+    "# Usage in another script or notebook\n",
+    "# from data_processing import calculate_time_differences\n",
+    "# calculate_time_differences(all_channel_msgs, reaction_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_top_20_user(data, channel='Random'):\n",
     "    \"\"\"get user with the highest number of message sent to any channel\"\"\"\n",
     "\n",
