updated the histograms plotting code

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -383,6 +383,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Add the new code for plotting histograms\n",
+    "plt.figure(figsize=(12, 8))\n",
+    "\n",
+    "# Consecutive Messages\n",
+    "plt.subplot(2, 2, 1)\n",
+    "all_channel_msgs['time_to_next_message'] = all_channel_msgs['msg_sent_time'].diff()\n",
+    "all_channel_msgs['time_to_next_message'].dropna().dt.total_seconds().hist(bins=50)\n",
+    "plt.title('Time Difference Between Consecutive Messages')\n",
+    "\n",
+    "# Consecutive Replies\n",
+    "plt.subplot(2, 2, 2)\n",
+    "all_channel_msgs['time_to_next_reply'] = all_channel_msgs.groupby('channel')['time_to_reply'].shift(-1)\n",
+    "all_channel_msgs['time_to_next_reply'].dropna().dt.total_seconds().hist(bins=50)\n",
+    "plt.title('Time Difference Between Consecutive Replies')\n",
+    "\n",
+    "# Consecutive Reactions\n",
+    "plt.subplot(2, 2, 3)\n",
+    "reaction_data['time_to_next_reaction'] = reaction_data.groupby('channel')['reaction_timestamp'].shift(-1)\n",
+    "reaction_data['time_to_next_reaction'].dropna().dt.total_seconds().hist(bins=50)\n",
+    "plt.title('Time Difference Between Consecutive Reactions')\n",
+    "\n",
+    "# Consecutive Events (Message, Reply, Reaction)\n",
+    "plt.subplot(2, 2, 4)\n",
+    "all_events = pd.concat([all_channel_msgs['msg_sent_time'], all_channel_msgs['time_thread_start'],\n",
+    "                       reaction_data['reaction_timestamp']]).sort_values()\n",
+    "all_events['time_to_next_event'] = all_events.diff()\n",
+    "all_events['time_to_next_event'].dropna().dt.total_seconds().hist(bins=50)\n",
+    "plt.title('Time Difference Between Consecutive Events (Message, Reply, Reaction)')\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_top_20_user(data, channel='Random'):\n",
     "    \"\"\"get user with the highest number of message sent to any channel\"\"\"\n",
     "\n",
