updated the sentiment analysis

--- a/notebooks/parse_slack_data.ipynb
+++ b/notebooks/parse_slack_data.ipynb
@@ -27,8 +27,13 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
+    "from textblob import TextBlob\n",
+    "\n",
     "from nltk.corpus import stopwords\n",
-    "from wordcloud import WordCloud"
+    "from wordcloud import WordCloud\n",
+    "\n",
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "from sklearn.decomposition import LatentDirichletAllocation"
    ]
   },
   {
@@ -476,6 +481,60 @@
     "    plt.xlabel(\"Sender Name\", size=18); plt.ylabel(\"Frequency\", size=18);\n",
     "    plt.xticks(size=14); plt.yticks(size=14);\n",
     "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming all_channel_msgs is your DataFrame with message and reply texts\n",
+    "# Concatenate message and reply texts\n",
+    "all_channel_msgs['combined_text'] = all_channel_msgs['msg_content'] + ' ' + all_channel_msgs['replies'].fillna('')\n",
+    "\n",
+    "# Vectorize the text data\n",
+    "vectorizer = CountVectorizer(stop_words='english', max_features=1000)\n",
+    "X = vectorizer.fit_transform(all_channel_msgs['combined_text'])\n",
+    "\n",
+    "# Apply Latent Dirichlet Allocation (LDA) for topic modeling\n",
+    "num_topics = 10  # You can adjust this based on your needs\n",
+    "lda = LatentDirichletAllocation(n_components=num_topics, random_state=42)\n",
+    "lda.fit(X)\n",
+    "\n",
+    "# Display the top words for each topic\n",
+    "feature_names = vectorizer.get_feature_names_out()\n",
+    "for topic_idx, topic in enumerate(lda.components_):\n",
+    "    top_words_idx = topic.argsort()[:-11:-1]\n",
+    "    top_words = [feature_names[i] for i in top_words_idx]\n",
+    "    print(f\"Topic #{topic_idx + 1}: {', '.join(top_words)}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Assuming all_channel_msgs is your DataFrame with timestamp and message content\n",
+    "# Assuming 'msg_sent_time' is in datetime format\n",
+    "\n",
+    "# Group messages by day since the start of the training\n",
+    "all_channel_msgs['day_since_start'] = (all_channel_msgs['msg_sent_time'] - all_channel_msgs['msg_sent_time'].min()).dt.days\n",
+    "\n",
+    "# Concatenate all messages and replies in the same day as one big text\n",
+    "grouped_by_day = all_channel_msgs.groupby('day_since_start')['msg_content'].apply(' '.join).reset_index()\n",
+    "\n",
+    "# Perform sentiment analysis on aggregated messages\n",
+    "grouped_by_day['sentiment'] = grouped_by_day['msg_content'].apply(lambda x: TextBlob(x).sentiment.polarity)\n",
+    "\n",
+    "# Visualize the time series trend of sentiments\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(grouped_by_day['day_since_start'], grouped_by_day['sentiment'], marker='o', linestyle='-')\n",
+    "plt.title('Sentiment Over Time')\n",
+    "plt.xlabel('Days Since Start of Training')\n",
+    "plt.ylabel('Sentiment Polarity')\n",
+    "plt.show()\n"
    ]
   },
   {
